--- a/index.html
+++ b/index.html
@@ -15,5 +15,75 @@
 </head>
 <body>
 
+    <div class="main-content">
+        <img class="body-img-left" src="img/icon-left.png" alt="icon-left" width="400" height="1060">
+        <img class="body-img-right" src="img/icon-right.png" alt="icon-right" width="410" height="750">
+        <div class="container">
+            <div class="our-pricing">
+                <h2 class="our-pricing-title">Our Pricing</h2>
+                <form class="pricing-switch" action="https://echo.htmlacademy" method="GET">
+                    <div class="switch" data-payment-annual="199.99" data-payment-monthly="19.99">
+                        <input class="switch-input-annual visually-hidden" type="radio" name="paymet_period" value="annual" id="annual-paymet-radio">
+                        <input class="switch-input-monthly visually-hidden" type="radio" name="paymet_period" value="monthly" id="monthly-paymet-radio" checked>
+                        <label class="switch-label" for="annual-paymet-radio">Annually</label>
+                        <div class="switch-control">
+                            <div class="switch-circle"></div>
+                            <label class="switch-control-annual" for="annual-paymet-radio"></label>
+                            <label class="switch-control-monthly" for="monthly-paymet-radio"></label>
+                        </div>
+                        <label class="switch-label" for="monthly-paymet-radio">Monthly</label>
+                    </div>
+                </form>
+            </div>
+
+            <!-- Price -->
+            <div class="price">
+                <div class="price-main" data-payment-annual="199.99" data-payment-monthly="19.99">
+                    <h3 class="price-basic-headig">Basic</h3>
+                    <div class="price-basic-title">
+                        <span class="price-basic-title-dollor">$</span>
+                        <span class="pracing-basic-value">19.99</span>
+                    </div>
+                    <ul class="price-basic-items">
+                        <li class="price-basic-item">500 GB Storage</li>
+                        <li class="price-basic-item">2 Users Allowed</li>
+                        <li class="price-basic-item">Send up to 3 GB</li>
+                    </ul>
+                    <a class="price-basic-link" href="index.html">Learn more</a>
+                </div>
+
+                <div class="price-main price-main-professional" data-payment-annual="249.99" data-payment-monthly="24.99">
+                    <h3 class="price-basic-headig">Professional</h3>
+                    <div class="price-basic-title">
+                        <span class="price-basic-title-dollor">$</span>
+                        <span class="pracing-basic-value">24.99</span>
+                    </div>
+                    <ul class="price-basic-items">
+                        <li class="price-basic-item">1 TB Storage</li>
+                        <li class="price-basic-item">5 Users Allowed</li>
+                        <li class="price-basic-item">Send up to 10 GB</li>
+                    </ul>
+                    <a class="price-basic-link" href="index.html">Learn more</a>
+                </div>
+
+                <div class="price-main" data-payment-annual="399.99" data-payment-monthly="39.99">
+                    <h3 class="price-basic-headig">Master</h3>
+                    <div class="price-basic-title">
+                        <span class="price-basic-title-dollor">$</span>
+                        <span class="pracing-basic-value">39.99</span>
+                    </div>
+                    <ul class="price-basic-items">
+                        <li class="price-basic-item">2 TB Storage</li>
+                        <li class="price-basic-item">10 Users Allowed</li>
+                        <li class="price-basic-item">Send up to 20 GB</li>
+                    </ul>
+                    <a class="price-basic-link" href="index.html">Learn more</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <script src="js/main.js"></script>
 </body>
 </html>
